Fixed code layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -514,7 +514,7 @@ footer {
 
 #post article pre, #post article img
 {
-	margin: 20px 0 0;
+	margin: 10px 0 30px;
 }
 
 #share
